fixed sticky layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,7 @@ a:hover {
 .layoutWrapper {
   display: flex;
 }
+
+section {
+  margin-inline: 100px;
+}
