--- a/components/Navbar/navbar.module.css
+++ b/components/Navbar/navbar.module.css
@@ -1,7 +1,8 @@
 .container {
-  position: sticky;
+  position: fixed;
   display: flex;
   flex-direction: column;
+  height: 100vh;
   justify-content: center;
   align-items: center;
 }
