--- a/components/Scroller/scroller.module.css
+++ b/components/Scroller/scroller.module.css
@@ -1,5 +1,5 @@
 .scroller {
-  position: sticky;
+  position: fixed;
   align-items: center;
   right: 40px;
   max-height: 100vh;
